--- a/renderer/PageLayout.css
+++ b/renderer/PageLayout.css
@@ -1,7 +1,16 @@
-#sidebar a {
-  padding: 2px 10px;
-  margin-left: -10px;
+/* This CSS is common to all pages */
+
+body {
+  margin: 0;
+  font-family: sans-serif;
 }
-#sidebar a.is-active {
-  background-color: #eee;
+* {
+  box-sizing: border-box;
+}
+a {
+  text-decoration: none;
+}
+
+.navitem {
+  padding: 3px;
 }
